--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.7.3",
-    "firebase-admin": "^12.1.0",
+    "firebase-admin": "^12.7.0",
     "genkit": "^1.8.0",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
@@ -62,6 +63,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.25.63"
   },
   "devDependencies": {
