--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,23 +5,24 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3048:3047"
+    env_file:
+      - ./env/.env.production
     environment:
       - NODE_ENV=production
       - NEXT_TELEMETRY_DISABLED=1
-    volumes:
-      - ./env:/app/env:ro
 
   app-dev:
     build:
       context: .
       dockerfile: Dockerfile.dev
     ports:
-      - "3048:3047"
+      - "3049:3000"
+    env_file:
+      - ./.env.local
     environment:
       - NODE_ENV=development
       - NEXT_TELEMETRY_DISABLED=1
     volumes:
       - ./:/app
       - /app/node_modules
-      - ./env:/app/env:ro
     command: npm run dev
