--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "firebase": "^11.7.3",
     "firebase-admin": "^12.7.0",
     "genkit": "^1.8.0",
+    "handlebars": "^4.7.8",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "openai": "^5.3.0",
@@ -61,6 +62,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-toastify": "^11.0.5",
+    "reactflow": "^11.11.4",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
