--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "analyze:data": "node scripts/run-analysis.js",
     "migrate:unified": "tsx scripts/migrate-to-unified.ts",
     "check:unified": "tsx scripts/check-unified-compatibility.ts"
@@ -70,6 +72,10 @@
     "zod": "^3.25.63"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -77,6 +83,8 @@
     "eslint": "^9.29.0",
     "eslint-config-next": "^15.3.3",
     "genkit-cli": "^1.8.0",
+    "jest": "^30.0.2",
+    "jest-environment-jsdom": "^30.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
