--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "@types/formidable": "^3.4.5",
+    "@types/papaparse": "^5.3.16",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.2.0",
@@ -53,11 +55,13 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.7.3",
     "firebase-admin": "^12.7.0",
+    "formidable": "^3.5.4",
     "genkit": "^1.8.0",
     "handlebars": "^4.7.8",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "openai": "^5.3.0",
+    "papaparse": "^5.5.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -66,12 +70,14 @@
     "react-toastify": "^11.0.5",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.1",
+    "shepherd.js": "^14.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "zod": "^3.25.63"
   },
   "devDependencies": {
+    "@playwright/test": "^1.53.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
