--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-toastify": "^11.0.5",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.1",
+    "resend": "^4.6.0",
     "shepherd.js": "^14.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
