--- a/package.json
+++ b/package.json
@@ -59,10 +59,12 @@
     "genkit": "^1.8.0",
     "handlebars": "^4.7.8",
     "lucide-react": "^0.475.0",
+    "nanoid": "^5.1.5",
     "next": "15.2.3",
     "openai": "^5.3.0",
     "papaparse": "^5.5.3",
     "patch-package": "^8.0.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -84,6 +86,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-toastify": "^4.0.2",
